# personal_cfo_agent_v01

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: CONNECTOR_STATUS_MATRIX.md  CPF_SGFINDEX_WORKFLOW.md  DASHBOARD_INPUT_UX_POLISH_V069.md  DASHBOARD_V2_V040.md  DASHBOARD_V3_V050.md  DASHBOARD_V4_V060.md  DATA_QUALITY_SUMMARY_V064.md  EXPECTED_SOURCE_CONTRACT_V067.md  IBKR_LIVE_READ_ACCEPTANCE_V021.md  IBKR_SAFE_LOCAL_SYNC_V022.md  LIVE_READ_SETUP_IBKR.md  LIVE_READ_SETUP_MOOMOO.md  LIVE_READ_SETUP_TIGER.md  LIVE_READ_SETUP_USMART.md  LIVE_READ_SETUP_WEBULL.md  LOCAL_ENV_SETUP.md  LOCAL_NET_WORTH_DOCTOR_V062.md  LOCAL_NET_WORTH_REFRESH_V059.md  LOCAL_PRIVATE_INPUT_KIT_V053.md  LOCAL_WORKBENCH_V066.md  LOCAL_WORKFLOW_STABILIZATION_V066.md  MANUAL_NAV_INPUT_V057.md  MANUAL_SNAPSHOT_GUIDE.md  MOOMOO_LIVE_READ_ACCEPTANCE_V030.md  MULTI_PROVIDER_LEDGER_V033.md  NET_WORTH_INTEGRITY_GUARD_V065.md  PERSONAL_CFO_AGENT_V01.md  PERSONAL_CFO_DASHBOARD_V020.md  PROPERTY_MORTGAGE_MANUAL_WORKFLOW.md  PROPERTY_MORTGAGE_SNAPSHOT_V043.md  SECURITY_BOUNDARIES.md  SG_RETIREMENT_TAX_SNAPSHOT_V044.md  SNAPSHOT_HISTORY_MANAGER_V068.md  SNAPSHOT_REVIEW_V066.md  SNAPSHOT_STORE_V042.md  TIGER_LIVE_READ_ACCEPTANCE_V031.md  UNIFIED_PRIVATE_INPUT_CENTER_V058.md  USMART_READONLY_FEASIBILITY_V057.md  WEBULL_LIVE_READ_ACCEPTANCE_V056.md  WEBULL_READONLY_FEASIBILITY_V054.md
scripts/: dev_validate.py  personal_cfo_agent.py  run_ibkr_readonly_sync.ps1.template  run_ibkr_readonly_sync.py
tests/: test_asset_normalizer.py  test_dashboard_v020.py  test_dashboard_v040.py  (+27 more)
(+87 files in other folders)
