[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-cfo-agent"
version = "0.1.0"
description = "API-first personal finance asset aggregation and risk dashboard foundation."
requires-python = ">=3.11"
readme = "docs/PERSONAL_CFO_AGENT_V01.md"
license = { text = "Private" }
authors = [{ name = "Personal CFO Agent" }]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=tmp"
